# NativeHook

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/linshujie/nativehook/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/linshujie/nativehook/: MainActivity.kt  NativeHandler.java  XHook.java
app/src/test/java/com/linshujie/nativehook/: ExampleUnitTest.kt
biz/: build.gradle
biz/src/androidTest/java/com/linshujie/biz/: ExampleInstrumentedTest.kt
biz/src/main/cpp/: CMakeLists.txt  biz.cpp
biz/src/main/java/com/linshujie/biz/: NativeLib.kt
biz/src/test/java/com/linshujie/biz/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
xhook/: build.gradle
xhook/src/main/cpp/xhook/: CMakeLists.txt
xhookorigin/: build.gradle
xhookorigin/src/main/cpp/: CMakeLists.txt
